--- a/sample_configs/default_config.toml
+++ b/sample_configs/default_config.toml
@@ -84,7 +84,7 @@
 #[processes]
 # The columns shown by the process widget. The following columns are supported:
 # PID, Name, CPU%, Mem%, R/s, W/s, T.Read, T.Write, User, State, Time, GMem%, GPU%
-#columns = ["pid", "name", "cpu%", "mem%", "r/s", "w/s", "t.read", "t.write", "user", "state", "gmem%", "gpu%"]
+#columns = ["PID", "Name", "CPU%", "Mem%", "R/s", "W/s", "T.Read", "T.Write", "User", "State", "GMem%", "GPU%"]
 
 # CPU widget configuration
 #[cpu]
