--- a/Cargo.toml
+++ b/Cargo.toml
@@ -72,9 +72,9 @@ nvidia = ["nvml-wrapper"]
 gpu = ["nvidia"]
 zfs = []
 logging = ["fern", "log", "time/local-offset"]
-generate_schema = ["schemars", "serde_json"]
+generate_schema = ["schemars", "serde_json", "strum"]
 deploy = ["battery", "gpu", "zfs"]
-default = ["deploy"]
+default = ["deploy", "generate_schema"]
 
 [dependencies]
 anyhow = "1.0.86"
@@ -85,18 +85,14 @@ concat-string = "1.0.1"
 crossterm = "0.27.0"
 ctrlc = { version = "3.4.4", features = ["termination"] }
 dirs = "5.0.1"
-fern = { version = "0.6.2", optional = true }
 hashbrown = "0.14.5"
 humantime = "2.1.0"
 indexmap = "2.2.6"
 indoc = "2.0.5"
 itertools = "0.13.0"
-log = { version = "0.4.21", optional = true }
 nvml-wrapper = { version = "0.10.0", optional = true, features = ["legacy-functions"] }
 regex = "1.10.4"
-schemars = { version = "0.8.21", optional = true }
 serde = { version = "1.0.203", features = ["derive"] }
-serde_json = { version = "1.0.117", optional = true }
 starship-battery = { version = "0.8.3", optional = true }
 sysinfo = "=0.30.12"
 thiserror = "1.0.61"
@@ -106,6 +102,15 @@ tui = { version = "0.26.3", package = "ratatui" }
 unicode-ellipsis = "0.1.4"
 unicode-segmentation = "1.11.0"
 unicode-width = "0.1.12"
+
+# Used for logging.
+fern = { version = "0.6.2", optional = true }
+log = { version = "0.4.21", optional = true }
+
+# These are just used for for schema generation.
+schemars = { version = "0.8.21", optional = true }
+serde_json = { version = "1.0.117", optional = true }
+strum = { version = "0.26", features = ["derive"], optional = true }
 
 [target.'cfg(unix)'.dependencies]
 libc = "0.2.155"
