--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,7 +38,8 @@ exclude = [
     "perf.data",
     "rustfmt.toml",
 ]
-rust-version = "1.74.0" # The oldest version I've tested that should still build - note this is not an official MSRV!
+# The oldest version I've tested that should still build - note this is not an official MSRV!
+rust-version = "1.74.0"
 
 [[bin]]
 name = "btm"
@@ -48,7 +49,8 @@ doctest = true
 doc = true
 
 [profile.dev.package."*"]
-opt-level = 3 # Compile dependencies with optimizations on even in debug mode.
+# Compile dependencies with optimizations on even in debug mode.
+opt-level = 3
 
 [profile.no-opt]
 inherits = "dev"
@@ -78,9 +80,9 @@ default = ["deploy"]
 
 [dependencies]
 anyhow = "1.0.86"
-backtrace = "0.3.72"
+backtrace = "0.3.73"
 cfg-if = "1.0.0"
-clap = { version = "4.5.4", features = ["default", "cargo", "wrap_help", "derive"] }
+clap = { version = "4.5.7", features = ["default", "cargo", "wrap_help", "derive"] }
 concat-string = "1.0.1"
 crossterm = "0.27.0"
 ctrlc = { version = "3.4.4", features = ["termination"] }
@@ -91,7 +93,7 @@ indexmap = "2.2.6"
 indoc = "2.0.5"
 itertools = "0.13.0"
 nvml-wrapper = { version = "0.10.0", optional = true, features = ["legacy-functions"] }
-regex = "1.10.4"
+regex = "1.10.5"
 serde = { version = "1.0.203", features = ["derive"] }
 starship-battery = { version = "0.8.3", optional = true }
 sysinfo = "=0.30.12"
@@ -101,7 +103,7 @@ toml_edit = { version = "0.22.14", features = ["serde"] }
 tui = { version = "0.26.3", package = "ratatui" }
 unicode-ellipsis = "0.1.4"
 unicode-segmentation = "1.11.0"
-unicode-width = "0.1.12"
+unicode-width = "0.1.13"
 
 # Used for logging.
 fern = { version = "0.6.2", optional = true }
@@ -123,7 +125,7 @@ core-foundation = "0.9.4"
 mach2 = "0.4.2"
 
 [target.'cfg(target_os = "windows")'.dependencies]
-windows = { version = "0.56.0", features = [
+windows = { version = "0.57.0", features = [
     "Win32_Foundation",
     "Win32_Security",
     "Win32_Storage_FileSystem",
@@ -147,11 +149,11 @@ predicates = "3.1.0"
 portable-pty = "0.8.1"
 
 [build-dependencies]
-clap = { version = "4.5.4", features = ["default", "cargo", "wrap_help", "derive"] }
-clap_complete = "4.5.2"
-clap_complete_nushell = "4.5.1"
-clap_complete_fig = "4.5.0"
-clap_mangen = "0.2.20"
+clap = { version = "4.5.7", features = ["default", "cargo", "wrap_help", "derive"] }
+clap_complete = "4.5.5"
+clap_complete_nushell = "4.5.2"
+clap_complete_fig = "4.5.1"
+clap_mangen = "0.2.21"
 indoc = "2.0.5"
 
 [package.metadata.deb]
