--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -90,7 +90,7 @@ jobs:
         uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
 
       - name: Set up Rust toolchain
-        uses: dtolnay/rust-toolchain@d8352f6b1d2e870bc5716e7a6d9b65c4cc244a1a
+        uses: dtolnay/rust-toolchain@21dc36fb71dd22e3317045c0c31a3f4249868b17
         with:
           toolchain: stable
           components: rustfmt, clippy
@@ -153,32 +153,23 @@ jobs:
               os: "ubuntu-latest",
               target: "i686-unknown-linux-gnu",
               cross: true,
-              rust: stable,
             }
           - {
               os: "ubuntu-latest",
               target: "x86_64-unknown-linux-musl",
               cross: false,
-              rust: stable,
             }
           - {
               os: "ubuntu-latest",
               target: "i686-unknown-linux-musl",
               cross: true,
-              rust: stable,
             }
 
-          - {
-              os: "windows-2019",
-              target: "i686-pc-windows-msvc",
-              cross: false,
-              rust: stable,
-            }
+          - { os: "windows-2019", target: "i686-pc-windows-msvc", cross: false }
           - {
               os: "windows-2019",
               target: "x86_64-pc-windows-gnu",
               cross: false,
-              rust: stable,
             }
 
           # Beta
@@ -186,19 +177,19 @@ jobs:
               os: "ubuntu-latest",
               target: "x86_64-unknown-linux-gnu",
               cross: false,
-              rust: beta,
+              rust: "beta",
             }
           - {
               os: "macos-12",
               target: "x86_64-apple-darwin",
               cross: false,
-              rust: beta,
+              rust: "beta",
             }
           - {
               os: "windows-2019",
               target: "x86_64-pc-windows-msvc",
               cross: false,
-              rust: beta,
+              rust: "beta",
             }
 
           # armv7
@@ -206,7 +197,6 @@ jobs:
               os: "ubuntu-latest",
               target: "armv7-unknown-linux-gnueabihf",
               cross: true,
-              rust: stable,
             }
 
           # armv6
@@ -214,7 +204,6 @@ jobs:
               os: "ubuntu-latest",
               target: "arm-unknown-linux-gnueabihf",
               cross: true,
-              rust: stable,
             }
 
           # PowerPC 64 LE
@@ -222,7 +211,6 @@ jobs:
               os: "ubuntu-latest",
               target: "powerpc64le-unknown-linux-gnu",
               cross: true,
-              rust: stable,
             }
 
           # Risc-V 64gc
@@ -230,7 +218,6 @@ jobs:
               os: "ubuntu-latest",
               target: "riscv64gc-unknown-linux-gnu",
               cross: true,
-              rust: stable,
             }
 
           # Android ARM64
@@ -238,7 +225,6 @@ jobs:
               os: "ubuntu-latest",
               target: "aarch64-linux-android",
               cross: true,
-              rust: stable,
               cross-version: "git:cabfc3b02d1edec03869fabdabf6a7f8b0519160",
               no-default-features: true,
             }
@@ -248,9 +234,9 @@ jobs:
         uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
 
       - name: Set up Rust toolchain
-        uses: dtolnay/rust-toolchain@d8352f6b1d2e870bc5716e7a6d9b65c4cc244a1a
+        uses: dtolnay/rust-toolchain@21dc36fb71dd22e3317045c0c31a3f4249868b17
         with:
-          toolchain: ${{ matrix.info.rust }}
+          toolchain: ${{ matrix.info.rust || 'stable' }}
           target: ${{ matrix.info.target }}
 
       - name: Enable Rust cache
