--- a/Cargo.toml
+++ b/Cargo.toml
@@ -82,7 +82,7 @@ generate_schema = ["schemars", "serde_json", "strum"]
 anyhow = "1.0.86"
 backtrace = "0.3.73"
 cfg-if = "1.0.0"
-clap = { version = "4.5.7", features = ["default", "cargo", "wrap_help", "derive"] }
+clap = { version = "4.5.11", features = ["default", "cargo", "wrap_help", "derive"] }
 concat-string = "1.0.1"
 crossterm = "0.27.0"
 ctrlc = { version = "3.4.4", features = ["termination"] }
@@ -94,10 +94,10 @@ indoc = "2.0.5"
 itertools = "0.13.0"
 nvml-wrapper = { version = "0.10.0", optional = true, features = ["legacy-functions"] }
 regex = "1.10.5"
-serde = { version = "1.0.203", features = ["derive"] }
-starship-battery = { version = "0.8.3", optional = true }
-sysinfo = "=0.30.12"
-toml_edit = { version = "0.22.14", features = ["serde"] }
+serde = { version = "1.0.204", features = ["derive"] }
+starship-battery = { version = "0.9.1", optional = true }
+sysinfo = "=0.30.13"
+toml_edit = { version = "0.22.17", features = ["serde"] }
 tui = { version = "0.27.0", package = "ratatui" }
 unicode-ellipsis = "0.2.0"
 unicode-segmentation = "1.11.0"
@@ -108,7 +108,7 @@ fern = { version = "0.6.2", optional = true }
 log = { version = "0.4.22", optional = true }
 time = { version = "0.3.36", features = ["local-offset", "formatting", "macros"], optional = true }
 
-# These are just used for for schema generation.
+# These are just used for JSON schema generation.
 schemars = { version = "0.8.21", optional = true }
 serde_json = { version = "1.0.120", optional = true }
 strum = { version = "0.26.3", features = ["derive"], optional = true }
@@ -117,7 +117,7 @@ strum = { version = "0.26.3", features = ["derive"], optional = true }
 libc = "0.2.155"
 
 [target.'cfg(target_os = "linux")'.dependencies]
-rustix = { version = "0.38.34", features = ["fs", "param", "process"] }
+rustix = { version = "0.38.34", features = ["fs", "param"] }
 
 [target.'cfg(target_os = "macos")'.dependencies]
 core-foundation = "0.9.4"
@@ -140,7 +140,7 @@ sysctl = { version = "0.5.5" }
 filedescriptor = "0.8.2"
 
 [dev-dependencies]
-assert_cmd = "2.0.14"
+assert_cmd = "2.0.15"
 cargo-husky = { version = "1.5.0", default-features = false, features = ["user-hooks"] }
 predicates = "3.1.0"
 
@@ -148,11 +148,11 @@ predicates = "3.1.0"
 portable-pty = "0.8.1"
 
 [build-dependencies]
-clap = { version = "4.5.8", features = ["default", "cargo", "wrap_help", "derive"] }
-clap_complete = "4.5.7"
-clap_complete_nushell = "4.5.2"
-clap_complete_fig = "4.5.1"
-clap_mangen = "0.2.22"
+clap = { version = "4.5.11", features = ["default", "cargo", "wrap_help", "derive"] }
+clap_complete = "4.5.11"
+clap_complete_nushell = "4.5.3"
+clap_complete_fig = "4.5.2"
+clap_mangen = "0.2.23"
 indoc = "2.0.5"
 
 [package.metadata.deb]
