--- a/tests/valid_configs/styling.toml
+++ b/tests/valid_configs/styling.toml
@@ -1,2 +1,13 @@
-[styles.tables.headers]
-color="LightBlue"
+# Test basic colours
+[styles.cpu]
+all_entry_color="255, 50, 50"
+
+# Test tables
+[styles.graphs.legend_text]
+color = "#fff"
+bg_color = "#000"
+bold = false
+
+# Test inline tables
+[styles.tables]
+headers = { color = "red", bg_color = "reset", bold = true }
