--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -166,7 +166,7 @@ nav:
       - "Config File":
           - configuration/config-file/index.md
           - "Flags": configuration/config-file/flags.md
-          - "Theming": configuration/config-file/theming.md
+          - "Styling": configuration/config-file/styling.md
           - "Layout": configuration/config-file/layout.md
           - "Data Filtering": configuration/config-file/data-filtering.md
           - "Processes": configuration/config-file/processes.md
