--- a/sample_configs/default_config.toml
+++ b/sample_configs/default_config.toml
@@ -138,7 +138,7 @@
 # - "nord-light".
 #
 # This will have the lowest precedence if a custom colour palette is set,
-# or overriden if the command-line flag for a built-in theme is set.
+# or overridden if the command-line flag for a built-in theme is set.
 #theme = "default"
 
 #[styles.cpu]
@@ -165,7 +165,7 @@
 #low_battery_color = "red"
 
 #[styles.tables]
-#headers = {color = "light blue"}
+#headers = {color = "light blue", bold = true}
 
 #[styles.graphs]
 #graph_color = "gray"
