--- a/tests/valid_configs/styling.toml
+++ b/tests/valid_configs/styling.toml
@@ -12,6 +12,13 @@ bold = false
 [styles.tables]
 headers = { color = "red", bg_color = "black", bold = true }
 
+# Test italics
+[styles.widgets.widget_title]
+color = "#0f0f0f"
+bg_color = "#f0f0f0"
+bold = true
+italics = true
+
 # Test using normal colour where inline table can also work
 [styles.widgets]
 selected_text = "#fff"
