--- a/sample_configs/default_config.toml
+++ b/sample_configs/default_config.toml
@@ -93,14 +93,14 @@
 
 # Disk widget configuration
 #[disk]
-#[disk.name_filter]
+#[name_filter]
 #is_list_ignored = true
 #list = ["/dev/sda\\d+", "/dev/nvme0n1p2"]
 #regex = true
 #case_sensitive = false
 #whole_word = false
 
-#[disk.mount_filter]
+#[mount_filter]
 #is_list_ignored = true
 #list = ["/mnt/.*", "/boot"]
 #regex = true
@@ -109,7 +109,7 @@
 
 # Temperature widget configuration
 #[temperature]
-#[temperature.sensor_filter]
+#[sensor_filter]
 #is_list_ignored = true
 #list = ["cpu", "wifi"]
 #regex = false
@@ -118,7 +118,7 @@
 
 # Network widget configuration
 #[network]
-#[network.interface_filter]
+#[interface_filter]
 #is_list_ignored = true
 #list = ["virbr0.*"]
 #regex = true
