--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -40,7 +40,7 @@ env:
   CARGO_HUSKY_DONT_INSTALL_HOOKS: "true"
 
 test_task:
-  auto_cancellation: "false" # We set this to false to prevent nightly builds from affecting this
+  auto_cancellation: $CIRRUS_BRANCH != 'main' # We set this to false to prevent nightly builds from affecting this
   only_if: $CIRRUS_BUILD_SOURCE != "api" && ($CIRRUS_BRANCH == "main" || $CIRRUS_PR != "")
   timeout_in: "20m"
   skip: "!changesInclude('.cargo/**', '.cirrus.yml', 'sample_configs/**', 'src/**', 'tests/**', 'build.rs', 'Cargo.lock', 'Cargo.toml', 'clippy.toml', 'rustfmt.toml')"
@@ -68,7 +68,7 @@ test_task:
   <<: *CLEANUP_TEMPLATE
 
 build_task:
-  auto_cancellation: "false"
+  auto_cancellation: $CIRRUS_BRANCH == 'main'
   only_if: $CIRRUS_BUILD_SOURCE == "api"
   timeout_in: "30m"
   env:
