--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -38,6 +38,7 @@ env:
   CARGO_INCREMENTAL: "0"
   CARGO_PROFILE_DEV_DEBUG: "0"
   CARGO_HUSKY_DONT_INSTALL_HOOKS: "true"
+  CARGO_BUILD_JOBS: "2"
 
 test_task:
   auto_cancellation: "false" # We set this to false to prevent nightly builds from affecting this
