--- a/tests/valid_configs/filtering.toml
+++ b/tests/valid_configs/filtering.toml
@@ -1,12 +1,12 @@
 [disk]
-[name_filter]
+[disk.name_filter]
 is_list_ignored = true
 list = ["/dev/sda\\d+", "/dev/nvme0n1p2"]
 regex = true
 case_sensitive = false
 whole_word = false
 
-[mount_filter]
+[disk.mount_filter]
 is_list_ignored = true
 list = ["/mnt/.*", "/boot"]
 regex = true
@@ -14,7 +14,7 @@ case_sensitive = false
 whole_word = false
 
 [temperature]
-[sensor_filter]
+[temperature.sensor_filter]
 is_list_ignored = true
 list = ["cpu", "wifi"]
 regex = false
@@ -22,7 +22,7 @@ case_sensitive = false
 whole_word = false
 
 [network]
-[interface_filter]
+[network.interface_filter]
 is_list_ignored = true
 list = ["virbr0.*"]
 regex = true
