--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -267,16 +267,16 @@ jobs:
   completion:
     name: "CI Pass Check"
     needs: [supported, other-check]
-    if: ${{ success() || failure() }}
+    if: ${{ always() }}
     runs-on: "ubuntu-latest"
     steps:
       - name: CI Passed
         if: ${{ (needs.supported.result == 'success' && needs.other-check.result == 'success') || (needs.supported.result == 'skipped' && needs.other-check.result == 'skipped') }}
         run: |
-          echo "CI workflow completed successfully.";
+          echo "CI workflow completed successfully or was skipped.";
 
       - name: CI Failed
-        if: ${{ needs.supported.result == 'failure' && needs.other-check.result == 'failure' }}
+        if: ${{ needs.supported.result == 'failure' && needs.other-check.result == 'failure' || (needs.supported.result == 'cancelled' && needs.other-check.result == 'cancelled') }}
         run: |
-          echo "CI workflow failed at some point.";
+          echo "CI workflow failed or was cancelled at some point.";
           exit 1;
