--- a/sample_configs/default_config.toml
+++ b/sample_configs/default_config.toml
@@ -74,7 +74,7 @@
 # Hides advanced options to stop a process on Unix-like systems.
 #disable_advanced_kill = false
 # Shows GPU(s) memory
-#enable_gpu = false
+#disable_gpu = false
 # Shows cache and buffer memory
 #enable_cache_memory = false
 # How much data is stored at once in terms of time.
