--- a/sample_configs/default_config.toml
+++ b/sample_configs/default_config.toml
@@ -1,11 +1,10 @@
-# This is a default config file for bottom.  All of the settings are commented
+# This is a default config file for bottom. All of the settings are commented
 # out by default; if you wish to change them uncomment and modify as you see
 # fit.
 
-# This group of options represents a command-line option.  Flags explicitly
+# This group of options represents a command-line option. Flags explicitly
 # added when running (ie: btm -a) will override this config file if an option
 # is also set here.
-
 [flags]
 # Whether to hide the average cpu entry.
 #hide_avg_cpu = false
@@ -55,8 +54,6 @@
 #battery = false
 # Disable mouse clicks
 #disable_click = false
-# Built-in themes.  Valid values are "default", "default-light", "gruvbox", "gruvbox-light", "nord", "nord-light"
-#color = "default"
 # Show memory values in the processes widget as values by default
 #process_memory_as_value = false
 # Show tree mode by default in the processes widget.
@@ -73,12 +70,16 @@
 #network_use_log = false
 # Hides advanced options to stop a process on Unix-like systems.
 #disable_advanced_kill = false
-# Shows GPU(s) memory
+# Hide GPU(s) information
 #disable_gpu = false
 # Shows cache and buffer memory
 #enable_cache_memory = false
 # How much data is stored at once in terms of time.
 #retention = "10m"
+# Where to place the legend for the memory widget. One of "none", "top-left", "top", "top-right", "left", "right", "bottom-left", "bottom", "bottom-right".
+#memory_legend = "TopRight"
+# Where to place the legend for the network widget. One of "none", "top-left", "top", "top-right", "left", "right", "bottom-left", "bottom", "bottom-right".
+#network_legend = "TopRight"
 
 # Processes widget configuration
 #[processes]
