--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -262,6 +262,7 @@ jobs:
 
   vm-check:
     name: "Test using VMs"
+    needs: pre-job
     runs-on: "ubuntu-latest"
     timeout-minutes: 30
     strategy:
